[gd_scene load_steps=4 format=3 uid="uid://dm7pbhbrl4kkr"]

[ext_resource type="Texture2D" uid="uid://djgdjb1wtam54" path="res://assets/images/Fondo_Menu.png" id="1_bjl46"]
[ext_resource type="Script" uid="uid://qx0jqh5m6fqo" path="res://Scripts/login_screen.gd" id="1_fo8r8"]
[ext_resource type="Texture2D" uid="uid://48b4m4eytwh3" path="res://assets/images/TituloJuego.png" id="2_fo8r8"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fo8r8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bjl46")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -43.0
offset_right = 212.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -139.5
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "INICIAR SESION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Usuario:"

[node name="UsernameEdit" type="LineEdit" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Contrase√±a:"

[node name="PasswordEdit" type="LineEdit" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
secret = true

[node name="ErrorLabel" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2

[node name="BtnLogin" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Entrar"

[node name="BtnGoRegister" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Registrarse"

[node name="BtnBack" type="Button" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
text = "Volver al menu"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = -49.0
offset_right = 892.0
offset_bottom = 323.0
texture = ExtResource("2_fo8r8")

[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/BtnLogin" to="." method="_on_BtnLogin_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/BtnGoRegister" to="." method="_on_BtnGoRegister_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/BtnBack" to="." method="_on_BtnBack_pressed"]
